--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/node": "^20.1.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@prisma/client": "^4.14.0",
+		"@vercel/postgres": "^0.3.0",
+		"prisma": "^4.14.0"
+	}
 }
