--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "classnames": "^2.3.2",
     "flowbite": "^1.6.5",
     "flowbite-svelte": "^0.34.12",
-    "prisma": "^4.14.0"
+    "prisma": "^4.14.0",
+    "zod": "^3.21.4"
   }
 }
