--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-heros-v2": "^0.4.2",
     "svelte-preprocess": "^5.0.3",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
